[package]
name = "zeiss-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-iterator = "1.4.1"
iced = {version = "0.10.0", features = ["smol"]}
iced_aw = { version = "0.7.0", features = ["glow", "icons"] }
serialport = "4.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zeiss_control]
path = "zeiss-control"
version = "0.0.1"
