[package]
name = "zeiss-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-iterator = "1.4.1"
gdk-pixbuf = "0.18.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serialport = "4.2.2"
vgtk = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zeiss_control]
path = "lib/zeiss-control"
version = "0.0.1"

[dependencies.nokhwa]
path = "lib/nokhwa"
version = "0.11.0"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu", "output-threaded"]
